[package]
name = "owning_ref"
version = "0.1.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"

repository = "https://github.com/Kimundi/owning-ref-rs"
keywords = ["reference", "sibling field"]
