[package]
name = "owning_ref"
version = "0.4.1"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"
documentation = "http://kimundi.github.io/owning-ref-rs/owning_ref/index.html"

repository = "https://github.com/Kimundi/owning-ref-rs"
keywords = ["reference", "sibling", "field", "owning"]

[dependencies]
shared-box = { git = "https://github.com/avitex/rust-shared-box", rev = "master" }

stable_deref_trait = "1.0.0"
aliasable_deref_trait = "0.2.0"